typos correction and combine sensitivity analysis

--- a/Excel_to_Gurobi.ipynb
+++ b/Excel_to_Gurobi.ipynb
@@ -104,7 +104,9 @@
     "    else:\n",
     "        raise NameError('Variable upper bound cannot be recognized')\n",
     "    variable_ub.append(t)\n",
-    "#print(obj_coeff)"
+    "    \n",
+    "# whether to run sensitivity analysis\n",
+    "run_sa = main.cell(column=2, row=7).value"
    ]
   },
   {
@@ -226,6 +228,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a24eda9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sensitivity analysis\n",
+    "def sensitivity_analysis()\n",
+    "    for v in m.getVars():\n",
+    "        print(\"For Variable \" + v.VarName+ \":\")\n",
+    "        print(\"Minimum value coefficient can take before the optimal decision changes \"  + \"is \" + str(v.SAObjLow))\n",
+    "        print(\"Maximum value coefficient can take before the optimal decision changes \"  + \"is \" + str(v.SAObjUp))\n",
+    "    \n",
+    "    for c in m.getConstrs():\n",
+    "        print(\"For constraint \" + c.ConstrName+ \":\")\n",
+    "        print(\"Shadow Price is \" + str(c.pi))\n",
+    "        print(\"Minimum value RHS can take before the shadow price changes \"  + \"is \" + str(c.SARHSLow))\n",
+    "        print(\"Maximum value RHS can take before the shadow price changes \"  + \"is \" + str(c.SARHSUp))\n",
+    "\n",
+    "def main(m, run_sa):\n",
+    "    m.optimize()\n",
+    "    if run_sa == 1:\n",
+    "        sensitivity_analysis\n",
+    "    else:\n",
+    "        1==1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "655c76ee",
    "metadata": {},
@@ -258,7 +288,7 @@
    ],
    "source": [
     "## run the model\n",
-    "m.optimize()"
+    "main(m, run_sa)"
    ]
   },
   {
@@ -305,14 +335,6 @@
     "# print optimal decisions (if not listed, that means their optimal value = 0)\n",
     "m.printAttr('X')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a24eda9a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
