--- a/Excel_to_Gurobi.ipynb
+++ b/Excel_to_Gurobi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "id": "778b6e7e",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "id": "c022ff73",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
    "id": "b7004836",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
    "id": "dd668d2e",
    "metadata": {},
    "outputs": [],
@@ -154,18 +154,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 85,
    "id": "5852a938",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Restricted license - for non-production use only - expires 2023-10-25\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# setup model\n",
     "m = Model()"
@@ -173,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
    "id": "61891c87",
    "metadata": {},
    "outputs": [],
@@ -190,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 87,
    "id": "7c1c1e11",
    "metadata": {},
    "outputs": [],
@@ -202,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 88,
    "id": "b8b2ce24",
    "metadata": {},
    "outputs": [],
@@ -228,13 +220,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "a24eda9a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# sensitivity analysis\n",
-    "def sensitivity_analysis()\n",
+    "def sensitivity_analysis():\n",
     "    for v in m.getVars():\n",
     "        print(\"For Variable \" + v.VarName+ \":\")\n",
     "        print(\"Minimum value coefficient can take before the optimal decision changes \"  + \"is \" + str(v.SAObjLow))\n",
@@ -248,15 +240,18 @@
     "\n",
     "def main(m, run_sa):\n",
     "    m.optimize()\n",
-    "    if run_sa == 1:\n",
-    "        sensitivity_analysis\n",
+    "    if run_sa==1:\n",
+    "        if \"I\" in variable_type or \"B\" in variable_type:\n",
+    "            raise NameError('There is at least one variable with type of integer/binary.')\n",
+    "        else:\n",
+    "            sensitivity_analysis()\n",
     "    else:\n",
     "        1==1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 90,
    "id": "655c76ee",
    "metadata": {},
    "outputs": [
@@ -264,16 +259,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gurobi Optimizer version 9.5.2 build v9.5.2rc0 (mac64[x86])\n",
-      "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
-      "Optimize a model with 4 rows, 3 columns and 6 nonzeros\n",
-      "Model fingerprint: 0xcea3b39c\n",
+      "Gurobi Optimizer version 9.5.2 build v9.5.2rc0 (mac64[rosetta2])\n",
+      "Thread count: 8 physical cores, 8 logical processors, using up to 8 threads\n",
+      "Optimize a model with 4 rows, 2 columns and 6 nonzeros\n",
+      "Model fingerprint: 0x8a2b7a82\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 4e+00]\n",
       "  Objective range  [5e+00, 7e+00]\n",
-      "  Bounds range     [1e+06, 2e+06]\n",
+      "  Bounds range     [0e+00, 0e+00]\n",
       "  RHS range        [1e+02, 2e+03]\n",
-      "Presolve removed 2 rows and 1 columns\n",
+      "Presolve removed 2 rows and 0 columns\n",
       "Presolve time: 0.01s\n",
       "Presolved: 2 rows, 2 columns, 4 nonzeros\n",
       "\n",
@@ -282,7 +277,29 @@
       "       2    4.0400000e+03   0.000000e+00   0.000000e+00      0s\n",
       "\n",
       "Solved in 2 iterations and 0.01 seconds (0.00 work units)\n",
-      "Optimal objective  4.040000000e+03\n"
+      "Optimal objective  4.040000000e+03\n",
+      "For Variable Tables:\n",
+      "Minimum value coefficient can take before the optimal decision changes is 3.75\n",
+      "Maximum value coefficient can take before the optimal decision changes is 10.0\n",
+      "For Variable Chairs:\n",
+      "Minimum value coefficient can take before the optimal decision changes is 3.5\n",
+      "Maximum value coefficient can take before the optimal decision changes is 9.333333333333334\n",
+      "For constraint R0:\n",
+      "Shadow Price is 0.6\n",
+      "Minimum value RHS can take before the shadow price changes is 1500.0\n",
+      "Maximum value RHS can take before the shadow price changes is 2625.0\n",
+      "For constraint R1:\n",
+      "Shadow Price is 2.6\n",
+      "Minimum value RHS can take before the shadow price changes is 850.0\n",
+      "Maximum value RHS can take before the shadow price changes is 1600.0\n",
+      "For constraint R2:\n",
+      "Shadow Price is 0.0\n",
+      "Minimum value RHS can take before the shadow price changes is 360.0\n",
+      "Maximum value RHS can take before the shadow price changes is inf\n",
+      "For constraint R3:\n",
+      "Shadow Price is 0.0\n",
+      "Minimum value RHS can take before the shadow price changes is -inf\n",
+      "Maximum value RHS can take before the shadow price changes is 320.0\n"
      ]
     }
    ],
@@ -293,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 91,
    "id": "9e83c0b9",
    "metadata": {},
    "outputs": [
@@ -303,7 +320,7 @@
        "4040.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 92,
    "id": "229908d1",
    "metadata": {},
    "outputs": [
@@ -326,8 +343,8 @@
       "\n",
       "    Variable            X \n",
       "-------------------------\n",
-      "       Table          320 \n",
-      "       Chair          360 \n"
+      "      Tables          320 \n",
+      "      Chairs          360 \n"
      ]
     }
    ],
@@ -335,6 +352,14 @@
     "# print optimal decisions (if not listed, that means their optimal value = 0)\n",
     "m.printAttr('X')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b9a2ad4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
