add constraint name

--- a/Excel_to_Gurobi.ipynb
+++ b/Excel_to_Gurobi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 42,
    "id": "778b6e7e",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 43,
    "id": "c022ff73",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 44,
    "id": "b7004836",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 45,
    "id": "dd668d2e",
    "metadata": {},
    "outputs": [],
@@ -143,18 +143,19 @@
     "cons_df = pd.DataFrame()\n",
     "for r in range(9, last_r_consraints+1):\n",
     "    r_values = []\n",
-    "    for c in range(2, const_typ_cind+2):\n",
+    "    for c in range(2, const_typ_cind+3):\n",
     "        r_values.append(main.cell(column=c, row=r).value)\n",
     "    values.append(r_values)\n",
     "    cons_df = pd.DataFrame(values)\n",
     "    cons_df.fillna(0, inplace=True)\n",
-    "    cons_df.rename(columns={const_typ_cind-2:'constraint type', \n",
-    "                            const_typ_cind-1:'RHS values'}, inplace=True)"
+    "    cons_df.rename(columns={const_typ_cind-2:'Constraint Type', \n",
+    "                            const_typ_cind-1:'RHS values',\n",
+    "                            const_typ_cind:'Constraint Name'}, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 48,
    "id": "5852a938",
    "metadata": {},
    "outputs": [],
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 49,
    "id": "61891c87",
    "metadata": {},
    "outputs": [],
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 50,
    "id": "7c1c1e11",
    "metadata": {},
    "outputs": [],
@@ -194,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 51,
    "id": "b8b2ce24",
    "metadata": {},
    "outputs": [],
@@ -202,25 +203,25 @@
     "# add constraints\n",
     "if cons_df.shape[0]:\n",
     "    ## add le constraints\n",
-    "    le_const = cons_df[cons_df['constraint type'] == '<=']\n",
+    "    le_const = cons_df[cons_df['Constraint Type'] == '<=']\n",
     "    le_const.reset_index(inplace=True, drop=True)\n",
     "    for i in range(le_const.shape[0]):\n",
-    "        m.addConstr(quicksum(le_const.iloc[i,j]* x[j] for j in range(n_variables)) <= le_const['RHS values'][i])\n",
+    "        m.addConstr(quicksum(le_const.iloc[i,j]* x[j] for j in range(n_variables)) <= le_const['RHS values'][i], name=le_const['Constraint Name'][i])\n",
     "    ## add ge constraints\n",
-    "    ge_const = cons_df[cons_df['constraint type'] == '>=']\n",
+    "    ge_const = cons_df[cons_df['Constraint Type'] == '>=']\n",
     "    ge_const.reset_index(inplace=True, drop=True)\n",
     "    for i in range(ge_const.shape[0]):\n",
-    "        m.addConstr(quicksum(ge_const.iloc[i,j]* x[j] for j in range(n_variables)) >= ge_const['RHS values'][i])\n",
+    "        m.addConstr(quicksum(ge_const.iloc[i,j]* x[j] for j in range(n_variables)) >= ge_const['RHS values'][i], name=ge_const['Constraint Name'][i])\n",
     "    ## add eq constraints\n",
-    "    eq_const = cons_df[cons_df['constraint type'] == '=']\n",
+    "    eq_const = cons_df[cons_df['Constraint Type'] == '=']\n",
     "    eq_const.reset_index(inplace=True, drop=True)\n",
     "    for i in range(eq_const.shape[0]):\n",
-    "        m.addConstr(quicksum(eq_const.iloc[i,j]* x[j] for j in range(n_variables)) == eq_const['RHS values'][i])"
+    "        m.addConstr(quicksum(eq_const.iloc[i,j]* x[j] for j in range(n_variables)) == eq_const['RHS values'][i], name=eq_const['Constraint Name'][i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 52,
    "id": "a24eda9a",
    "metadata": {},
    "outputs": [],
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 53,
    "id": "655c76ee",
    "metadata": {},
    "outputs": [
@@ -261,45 +262,36 @@
      "text": [
       "Gurobi Optimizer version 9.5.2 build v9.5.2rc0 (mac64[rosetta2])\n",
       "Thread count: 8 physical cores, 8 logical processors, using up to 8 threads\n",
-      "Optimize a model with 4 rows, 2 columns and 6 nonzeros\n",
-      "Model fingerprint: 0x8a2b7a82\n",
+      "Optimize a model with 2 rows, 2 columns and 4 nonzeros\n",
+      "Model fingerprint: 0xd981af52\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 4e+00]\n",
       "  Objective range  [5e+00, 7e+00]\n",
-      "  Bounds range     [0e+00, 0e+00]\n",
-      "  RHS range        [1e+02, 2e+03]\n",
-      "Presolve removed 2 rows and 0 columns\n",
+      "  Bounds range     [1e+02, 4e+02]\n",
+      "  RHS range        [1e+03, 2e+03]\n",
       "Presolve time: 0.01s\n",
       "Presolved: 2 rows, 2 columns, 4 nonzeros\n",
       "\n",
       "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0    5.6000000e+03   1.498748e+02   0.000000e+00      0s\n",
+      "       0    2.8000000e+31   1.750000e+30   2.800000e+01      0s\n",
       "       2    4.0400000e+03   0.000000e+00   0.000000e+00      0s\n",
       "\n",
       "Solved in 2 iterations and 0.01 seconds (0.00 work units)\n",
       "Optimal objective  4.040000000e+03\n",
-      "For Variable Tables:\n",
+      "For Variable tables:\n",
       "Minimum value coefficient can take before the optimal decision changes is 3.75\n",
       "Maximum value coefficient can take before the optimal decision changes is 10.0\n",
-      "For Variable Chairs:\n",
+      "For Variable chairs:\n",
       "Minimum value coefficient can take before the optimal decision changes is 3.5\n",
       "Maximum value coefficient can take before the optimal decision changes is 9.333333333333334\n",
-      "For constraint R0:\n",
+      "For constraint carpentry constraint:\n",
       "Shadow Price is 0.6\n",
       "Minimum value RHS can take before the shadow price changes is 1500.0\n",
       "Maximum value RHS can take before the shadow price changes is 2625.0\n",
-      "For constraint R1:\n",
+      "For constraint painting constraint:\n",
       "Shadow Price is 2.6\n",
       "Minimum value RHS can take before the shadow price changes is 850.0\n",
-      "Maximum value RHS can take before the shadow price changes is 1600.0\n",
-      "For constraint R2:\n",
-      "Shadow Price is 0.0\n",
-      "Minimum value RHS can take before the shadow price changes is 360.0\n",
-      "Maximum value RHS can take before the shadow price changes is inf\n",
-      "For constraint R3:\n",
-      "Shadow Price is 0.0\n",
-      "Minimum value RHS can take before the shadow price changes is -inf\n",
-      "Maximum value RHS can take before the shadow price changes is 320.0\n"
+      "Maximum value RHS can take before the shadow price changes is 1600.0\n"
      ]
     }
    ],
@@ -310,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 54,
    "id": "9e83c0b9",
    "metadata": {},
    "outputs": [
@@ -320,7 +312,7 @@
        "4040.0"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 42,
    "id": "229908d1",
    "metadata": {},
    "outputs": [
@@ -343,8 +335,9 @@
       "\n",
       "    Variable            X \n",
       "-------------------------\n",
-      "      Tables          320 \n",
-      "      Chairs          360 \n"
+      "   Brazilian      1.5e+06 \n",
+      "   Colombian       520000 \n",
+      "    Peruvian     1.98e+06 \n"
      ]
     }
    ],
