--- a/Excel_to_Gurobi.ipynb
+++ b/Excel_to_Gurobi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "id": "778b6e7e",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "id": "c022ff73",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "id": "b7004836",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "id": "dd668d2e",
    "metadata": {},
    "outputs": [],
@@ -139,6 +139,15 @@
     "        last_r_consraints=r\n",
     "\n",
     "## read constraints as dataframe\n",
+    "for r in range(9, last_r_consraints+1):\n",
+    "    v = main.cell(column=const_typ_cind+2, row=r).value\n",
+    "    if v is None:\n",
+    "        main.cell(column=const_typ_cind+2, row=r).value = \"c\"+str(r-8)\n",
+    "    elif type(v) != str:\n",
+    "        main.cell(column=const_typ_cind+2, row=r).value = str(v)\n",
+    "    else:\n",
+    "        1==1\n",
+    "\n",
     "values = []\n",
     "cons_df = pd.DataFrame()\n",
     "for r in range(9, last_r_consraints+1):\n",
@@ -155,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "id": "5852a938",
    "metadata": {},
    "outputs": [],
@@ -166,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "id": "61891c87",
    "metadata": {},
    "outputs": [],
@@ -183,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "id": "7c1c1e11",
    "metadata": {},
    "outputs": [],
@@ -195,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 62,
    "id": "b8b2ce24",
    "metadata": {},
    "outputs": [],
@@ -221,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 63,
    "id": "a24eda9a",
    "metadata": {},
    "outputs": [],
@@ -252,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
    "id": "655c76ee",
    "metadata": {},
    "outputs": [
@@ -284,7 +293,7 @@
       "For Variable chairs:\n",
       "Minimum value coefficient can take before the optimal decision changes is 3.5\n",
       "Maximum value coefficient can take before the optimal decision changes is 9.333333333333334\n",
-      "For constraint carpentry constraint:\n",
+      "For constraint c1:\n",
       "Shadow Price is 0.6\n",
       "Minimum value RHS can take before the shadow price changes is 1500.0\n",
       "Maximum value RHS can take before the shadow price changes is 2625.0\n",
@@ -302,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 65,
    "id": "9e83c0b9",
    "metadata": {},
    "outputs": [
@@ -312,7 +321,7 @@
        "4040.0"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 66,
    "id": "229908d1",
    "metadata": {},
    "outputs": [
@@ -335,9 +344,8 @@
       "\n",
       "    Variable            X \n",
       "-------------------------\n",
-      "   Brazilian      1.5e+06 \n",
-      "   Colombian       520000 \n",
-      "    Peruvian     1.98e+06 \n"
+      "      tables          320 \n",
+      "      chairs          360 \n"
      ]
     }
    ],
