--- a/Excel_to_Gurobi.ipynb
+++ b/Excel_to_Gurobi.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 34,
    "id": "778b6e7e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from gurobipy import *\n",
-    "import openpyxl"
+    "import openpyxl\n",
+    "from IPython.display import Markdown, display"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 35,
    "id": "c022ff73",
    "metadata": {},
    "outputs": [],
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 36,
    "id": "b7004836",
    "metadata": {},
    "outputs": [],
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 37,
    "id": "dd668d2e",
    "metadata": {},
    "outputs": [],
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 38,
    "id": "5852a938",
    "metadata": {},
    "outputs": [],
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 39,
    "id": "61891c87",
    "metadata": {},
    "outputs": [],
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 40,
    "id": "7c1c1e11",
    "metadata": {},
    "outputs": [],
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 41,
    "id": "b8b2ce24",
    "metadata": {},
    "outputs": [],
@@ -230,13 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 46,
    "id": "a24eda9a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# sensitivity analysis\n",
     "def sensitivity_analysis():\n",
+    "    display(Markdown(\"**Sensitivity Analysis:**\"))\n",
     "    for v in m.getVars():\n",
     "        print(\"For Variable \" + v.VarName+ \":\")\n",
     "        print(\"Minimum value coefficient can take before the optimal decision changes \"  + \"is \" + str(v.SAObjLow))\n",
@@ -249,6 +251,7 @@
     "        print(\"Maximum value RHS can take before the shadow price changes \"  + \"is \" + str(c.SARHSUp))\n",
     "\n",
     "def main(m, run_sa):\n",
+    "    display(Markdown(\"**Solve Gurobi Model:**\"))\n",
     "    m.optimize()\n",
     "    if run_sa==1:\n",
     "        if \"I\" in variable_type or \"B\" in variable_type:\n",
@@ -261,46 +264,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 47,
    "id": "655c76ee",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "**Solve Gurobi Model:**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Gurobi Optimizer version 9.5.2 build v9.5.2rc0 (mac64[rosetta2])\n",
       "Thread count: 8 physical cores, 8 logical processors, using up to 8 threads\n",
-      "Optimize a model with 2 rows, 2 columns and 4 nonzeros\n",
-      "Model fingerprint: 0xd981af52\n",
+      "Optimize a model with 4 rows, 2 columns and 6 nonzeros\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 4e+00]\n",
       "  Objective range  [5e+00, 7e+00]\n",
-      "  Bounds range     [1e+02, 4e+02]\n",
-      "  RHS range        [1e+03, 2e+03]\n",
-      "Presolve time: 0.01s\n",
-      "Presolved: 2 rows, 2 columns, 4 nonzeros\n",
+      "  Bounds range     [0e+00, 0e+00]\n",
+      "  RHS range        [1e+02, 2e+03]\n",
       "\n",
-      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0    2.8000000e+31   1.750000e+30   2.800000e+01      0s\n",
-      "       2    4.0400000e+03   0.000000e+00   0.000000e+00      0s\n",
-      "\n",
-      "Solved in 2 iterations and 0.01 seconds (0.00 work units)\n",
-      "Optimal objective  4.040000000e+03\n",
-      "For Variable tables:\n",
+      "Solved in 0 iterations and 0.00 seconds (0.00 work units)\n",
+      "Optimal objective  4.040000000e+03\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Sensitivity Analysis:**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For Variable Tables:\n",
       "Minimum value coefficient can take before the optimal decision changes is 3.75\n",
       "Maximum value coefficient can take before the optimal decision changes is 10.0\n",
-      "For Variable chairs:\n",
+      "For Variable Chairs:\n",
       "Minimum value coefficient can take before the optimal decision changes is 3.5\n",
       "Maximum value coefficient can take before the optimal decision changes is 9.333333333333334\n",
-      "For constraint c1:\n",
+      "For constraint carpentry_time:\n",
       "Shadow Price is 0.6\n",
       "Minimum value RHS can take before the shadow price changes is 1500.0\n",
       "Maximum value RHS can take before the shadow price changes is 2625.0\n",
-      "For constraint painting constraint:\n",
+      "For constraint painting_time:\n",
       "Shadow Price is 2.6\n",
       "Minimum value RHS can take before the shadow price changes is 850.0\n",
-      "Maximum value RHS can take before the shadow price changes is 1600.0\n"
+      "Maximum value RHS can take before the shadow price changes is 1600.0\n",
+      "For constraint chair_upperbound:\n",
+      "Shadow Price is 0.0\n",
+      "Minimum value RHS can take before the shadow price changes is 360.0\n",
+      "Maximum value RHS can take before the shadow price changes is inf\n",
+      "For constraint table_lowerbound:\n",
+      "Shadow Price is 0.0\n",
+      "Minimum value RHS can take before the shadow price changes is -inf\n",
+      "Maximum value RHS can take before the shadow price changes is 320.0\n"
      ]
     }
    ],
@@ -311,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 48,
    "id": "9e83c0b9",
    "metadata": {},
    "outputs": [
@@ -321,7 +355,7 @@
        "4040.0"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 49,
    "id": "229908d1",
    "metadata": {},
    "outputs": [
@@ -344,8 +378,8 @@
       "\n",
       "    Variable            X \n",
       "-------------------------\n",
-      "      tables          320 \n",
-      "      chairs          360 \n"
+      "      Tables          320 \n",
+      "      Chairs          360 \n"
      ]
     }
    ],
@@ -357,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b9a2ad4",
+   "id": "70ff26d3",
    "metadata": {},
    "outputs": [],
    "source": []
