--- a/Excel_to_Gurobi.ipynb
+++ b/Excel_to_Gurobi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "778b6e7e",
    "metadata": {},
    "outputs": [],
@@ -15,19 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "id": "c022ff73",
    "metadata": {},
    "outputs": [],
    "source": [
     "# reading the inputs from Excel workbook\n",
-    "wb = openpyxl.load_workbook(\"Model_Inputs.xlsx\")\n",
+    "wb = openpyxl.load_workbook(\"Model_Inputs.xlsx\", data_only=True)\n",
     "main = wb['Main']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "id": "b7004836",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "id": "dd668d2e",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "id": "5852a938",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "id": "61891c87",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 33,
    "id": "7c1c1e11",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "id": "b8b2ce24",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 35,
    "id": "a24eda9a",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 36,
    "id": "655c76ee",
    "metadata": {},
    "outputs": [
@@ -287,54 +287,22 @@
       "Gurobi Optimizer version 9.5.2 build v9.5.2rc0 (mac64[rosetta2])\n",
       "Thread count: 8 physical cores, 8 logical processors, using up to 8 threads\n",
       "Optimize a model with 4 rows, 2 columns and 6 nonzeros\n",
+      "Model fingerprint: 0x0b602593\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 4e+00]\n",
-      "  Objective range  [5e+00, 7e+00]\n",
+      "  Objective range  [5e+00, 6e+00]\n",
       "  Bounds range     [0e+00, 0e+00]\n",
       "  RHS range        [1e+02, 2e+03]\n",
+      "Presolve removed 2 rows and 0 columns\n",
+      "Presolve time: 0.01s\n",
+      "Presolved: 2 rows, 2 columns, 4 nonzeros\n",
       "\n",
-      "Solved in 0 iterations and 0.00 seconds (0.00 work units)\n",
-      "Optimal objective  4.040000000e+03\n"
-     ]
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "**Sensitivity Analysis:**"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "For Variable Tables:\n",
-      "Minimum value coefficient can take before the optimal decision changes is 3.75\n",
-      "Maximum value coefficient can take before the optimal decision changes is 10.0\n",
-      "For Variable Chairs:\n",
-      "Minimum value coefficient can take before the optimal decision changes is 3.5\n",
-      "Maximum value coefficient can take before the optimal decision changes is 9.333333333333334\n",
-      "For constraint carpentry_time:\n",
-      "Shadow Price is 0.6\n",
-      "Minimum value RHS can take before the shadow price changes is 1500.0\n",
-      "Maximum value RHS can take before the shadow price changes is 2625.0\n",
-      "For constraint painting_time:\n",
-      "Shadow Price is 2.6\n",
-      "Minimum value RHS can take before the shadow price changes is 850.0\n",
-      "Maximum value RHS can take before the shadow price changes is 1600.0\n",
-      "For constraint chair_upperbound:\n",
-      "Shadow Price is 0.0\n",
-      "Minimum value RHS can take before the shadow price changes is 360.0\n",
-      "Maximum value RHS can take before the shadow price changes is inf\n",
-      "For constraint table_lowerbound:\n",
-      "Shadow Price is 0.0\n",
-      "Minimum value RHS can take before the shadow price changes is -inf\n",
-      "Maximum value RHS can take before the shadow price changes is 320.0\n"
+      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
+      "       0    4.8000000e+03   1.498748e+02   0.000000e+00      0s\n",
+      "       2    3.7200000e+03   0.000000e+00   0.000000e+00      0s\n",
+      "\n",
+      "Solved in 2 iterations and 0.01 seconds (0.00 work units)\n",
+      "Optimal objective  3.720000000e+03\n"
      ]
     }
    ],
@@ -345,17 +313,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 37,
    "id": "9e83c0b9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4040.0"
+       "3720.0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "id": "229908d1",
    "metadata": {},
    "outputs": [
@@ -392,6 +360,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "70ff26d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98db299b",
    "metadata": {},
    "outputs": [],
    "source": []
